# OpenIGTLink

./: CMakeLists.txt  OpenIGTLinkConfig.cmake.in  UseOpenIGTLink.cmake.in
CMake/: OpenIGTLinkCMakeTests.cmake
Source/: CMakeLists.txt  igtlMessageBase.h
Source/igtlutil/: CMakeLists.txt
